# zehta.me

./: .gitignore  Pipfile  README.md  build.sh  combine_css.sh  netlify.toml  publish.sh  pyproject.toml  server.sh  source.lektorproject  sri_hashes.sh  tidy.sh  tools.sh
docs/: 403.html  404.html  410.html  _redirects  feed.xml  index.html  sitemap.xml
docs/about/: index.html
docs/about/contact/: index.html
docs/about/thanks/: index.html
docs/netlify/edge-functions/: download-tracker.js  download-tracker.js.sha512  package-lock.json  package.json
docs/page/2/: index.html
docs/page/3/: index.html
docs/page/4/: index.html
docs/page/5/: index.html
docs/page/6/: index.html
docs/page/7/: index.html
docs/page/8/: index.html
docs/resume/: index.html
docs/static/: layout.css  layout.css.sha512  normalize.css  normalize.css.sha512
docs/tags/: index.html
docs/tags/1998/: index.html
docs/tags/2002/: index.html
docs/tags/2012/: index.html
docs/tags/2013/: index.html
docs/tags/2014/: index.html
docs/tags/2015/: index.html
docs/tags/2016/: index.html
docs/tags/2017/: index.html
docs/tags/2019/: index.html
docs/tags/2020/: index.html
docs/tags/2021/: index.html
docs/tags/2022/: index.html
docs/tags/2023/: index.html
docs/tags/all/: index.html
docs/tags/art/: index.html
docs/tags/automation/: index.html
docs/tags/bash/: index.html
nginx-conf.d/: default.conf
source/assets/: _redirects
source/models/: blog-post.ini  page.ini  tag.ini  tags.ini
source/templates/: layout.html  sitemap.xml  tags.html
(+83 files in other folders)
