[project]
name = "zehta-me"
version = "3.0.0"
description = "Source for https://zehta.me/"
readme = "README.md"
python-downloads = "manual"
python-preference = "only-system"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "lektor>=3.3.13",
    "ruff>=0.15.6",
]

[tool.ruff]
# https://docs.astral.sh/ruff/settings/#top-level
extend-exclude = ["docs"]
line-length = 79
show-fixes = true
src = ["source"]

[tool.ruff.format]
# https://docs.astral.sh/ruff/settings/#format
docstring-code-format = true
docstring-code-line-length = 79
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/settings/#lint
dummy-variable-rgx = "^__?$"
# Skip specific rules (see `uv run ruff linter`, `uv run ruff rule D200`, etc.)
ignore = ["COM812", "D200", "D212"]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
# https://docs.astral.sh/ruff/settings/#lintflake8-annotations
ignore-fully-untyped = true

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
split-on-trailing-comma = false

[tool.ruff.lint.isort.import-heading]
# https://docs.astral.sh/ruff/settings/#lint_isort_import-heading
future = "Future imports"
standard-library = "Standard library imports"
third-party = "Third party imports"
first-party = "First party imports"
local-folder = "Local folder imports"

[tool.ruff.lint.pydocstyle]
# https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "google"
